--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "styles-debugger": "^0.0.5"
   },
   "scripts": {
-    "start": "NODE_ENV=DEV react-app-rewired start",
+    "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
