--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-pose": "^4.0.8",
     "react-tiniest-router": "^0.1.0",
     "styled-components": "^4.3.2",
-    "styles-debugger": "^0.0.5"
+    "styles-debugger": "^0.0.5",
+    "react-app-rewired": "^2.1.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
