--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-tiniest-router": "^0.1.0",
     "styled-components": "^4.3.2",
     "styles-debugger": "^0.0.5",
-    "react-app-rewired": "^2.1.3"
+    "react-app-rewired": "^2.1.3",
+    "customize-cra": "^0.2.13"
   },
   "scripts": {
     "start": "react-app-rewired start",
